added cats images

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <div class="bg__grid"></div>
+    <div class="cats">
+        <img src="./assets/1.png" alt="cats">
+        <img src="./assets/2.png" alt="cats">
+    </div>
     <div class="container calculator">
         <div class="calculator__field">
             <input type="text" class="calculator__input" id="" placeholder="Enter what you want to calculate">
