--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,9 @@
     <div class="container calculator">
         <div class="calculator__field">
             <input type="text" class="calculator__input" id="math-input" placeholder="Enter what you want to calculate">
+            <span class="calculator__input-clear">×</span>
         </div>
         <div class="calculator__result" id="result-output"></div>
-        <!-- <div class="calculator__result">
-            <p>Result:</p>
-            <p class="calculator__result-answer" id="res-view">2 + 2 = <span>4</span></p>
-        </div> -->
         <div class="calculator__buttons">
             <div class="calculator__buttons__number">
                 <button data-btn-num class="button button--number">1</button>
@@ -44,6 +41,7 @@
                 <button data-btn-action="/" class="button button--action">÷</button>
             </div>
             <div class="calculator__buttons__scope">
+                <button class="button button--action" id="remove-symbol-btn">←</button>
                 <button data-btn-action="(" class="button button--action">(</button>
                 <button data-btn-action=")" class="button button--action">)</button>
                 <button class="button button--get-res" id="result-btn">=</button>
