--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,14 @@
     <div class="container calculator">
         <div class="calculator">
             <div class="calculator__field">
-                <input type="text" class="calculator__input" id="math-input"
-                    placeholder="Enter what you want to calculate">
-                <span class="calculator__input-clear">×</span>
+                <!-- <input type="text" class="calculator__input" id="math-input"
+                    placeholder="Enter what you want to calculate"> -->
+                <!-- <span class="calculator__input-clear">×</span> -->
             </div>
             <div class="calculator__result" id="result-output"></div>
             <div class="calculator__buttons">
                 <div class="calculator__buttons__number">
-                    <button data-btn-num class="button button--number">1</button>
+                    <!-- <button data-btn-num class="button button--number">1</button>
                     <button data-btn-num class="button button--number">2</button>
                     <button data-btn-num class="button button--number">3</button>
                     <button data-btn-num class="button button--number">4</button>
@@ -34,7 +34,7 @@
                     <button data-btn-num class="button button--number">8</button>
                     <button data-btn-num class="button button--number">9</button>
                     <button data-btn-num class="button button--number zero">0</button>
-                    <button data-btn-num class="button button--number">.</button>
+                    <button data-btn-num class="button button--number">.</button> -->
                 </div>
                 <div class="calculator__buttons__actions">
                     <button data-btn-action="+" class="button button--action">+</button>
