--- a/src/index.html
+++ b/src/index.html
@@ -37,16 +37,14 @@
                     <button data-btn-num class="button button--number">.</button> -->
                 </div>
                 <div class="calculator__buttons__actions">
-                    <button data-btn-action="+" class="button button--action">+</button>
+                    <!-- <button data-btn-action="+" class="button button--action">+</button>
                     <button data-btn-action="-" class="button button--action">-</button>
                     <button data-btn-action="*" class="button button--action">×</button>
                     <button data-btn-action="/" class="button button--action">÷</button>
-                </div>
-                <div class="calculator__buttons__scope">
                     <button class="button button--action" id="remove-symbol-btn">←</button>
                     <button data-btn-action="(" class="button button--action">(</button>
                     <button data-btn-action=")" class="button button--action">)</button>
-                    <button class="button button--get-res" id="result-btn">=</button>
+                    <button class="button button--get-res" id="result-btn">=</button> -->
                 </div>
             </div>
         </div>
