changed some styles

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <img src="./assets/1.png" alt="cats">
         <img src="./assets/2.png" alt="cats">
     </div>
-    <div class="container calculator">
+    <div class="container">
         <div class="calculator">
             <div class="calculator__field">
                 <!-- <input type="text" class="calculator__input" id="math-input"
@@ -24,27 +24,8 @@
             <div class="calculator__result" id="result-output"></div>
             <div class="calculator__buttons">
                 <div class="calculator__buttons__number">
-                    <!-- <button data-btn-num class="button button--number">1</button>
-                    <button data-btn-num class="button button--number">2</button>
-                    <button data-btn-num class="button button--number">3</button>
-                    <button data-btn-num class="button button--number">4</button>
-                    <button data-btn-num class="button button--number">5</button>
-                    <button data-btn-num class="button button--number">6</button>
-                    <button data-btn-num class="button button--number">7</button>
-                    <button data-btn-num class="button button--number">8</button>
-                    <button data-btn-num class="button button--number">9</button>
-                    <button data-btn-num class="button button--number zero">0</button>
-                    <button data-btn-num class="button button--number">.</button> -->
                 </div>
                 <div class="calculator__buttons__actions">
-                    <!-- <button data-btn-action="+" class="button button--action">+</button>
-                    <button data-btn-action="-" class="button button--action">-</button>
-                    <button data-btn-action="*" class="button button--action">×</button>
-                    <button data-btn-action="/" class="button button--action">÷</button>
-                    <button class="button button--action" id="remove-symbol-btn">←</button>
-                    <button data-btn-action="(" class="button button--action">(</button>
-                    <button data-btn-action=")" class="button button--action">)</button>
-                    <button class="button button--get-res" id="result-btn">=</button> -->
                 </div>
             </div>
         </div>
