designed a new look

--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,34 @@
     <div class="container">
         <div class="calculator">
             <div class="calculator__field">
-                <!-- <input type="text" class="calculator__input" id="math-input"
-                    placeholder="Enter what you want to calculate"> -->
-                <!-- <span class="calculator__input-clear">×</span> -->
             </div>
             <div class="calculator__result" id="result-output"></div>
             <div class="calculator__buttons">
-                <div class="calculator__buttons__number">
+                <div class="calculator__buttons__header">
+                    <button class="button button--action">pi</button>
+                    <button class="button button--action">e</button>
+                    <button class="button button--action">(</button>
+                    <button class="button button--action">)</button>
+                    <button class="button button--action">=-</button>
+                    <button class="button button--action">AC</button>
                 </div>
-                <div class="calculator__buttons__actions">
+                <div class="calculator__buttons__main">
+                    <div class="calculator__buttons__actions">
+                        <button class="button button--action">sin</button>
+                        <button class="button button--action">cos</button>
+                        <button class="button button--action">tg</button>
+                        <button class="button button--action">ctg</button>
+                        <button class="button button--action">√</button>
+                        <button class="button button--action">
+                            <p>x<sup>y</sup></p>
+                        </button>
+                        <button class="button button--action">n!</button>
+                        <button class="button button--action">%</button>
+                    </div>
+                    <div class="calculator__buttons__number">
+                    </div>
+                    <div class="calculator__buttons__actions" id="common-actions">
+                    </div>
                 </div>
             </div>
         </div>
