removed code from html and added class component

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <img src="./assets/2.png" alt="cats">
     </div>
     <div class="container">
-        <div class="calculator">
+        <!-- <div class="calculator">
             <div class="calculator__field">
             </div>
             <div class="calculator__result" id="result-output"></div>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 
